# smi-tiled

./: .gitignore  .readthedocs.yaml  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
.opencode/skills/smi-data-guide/: SKILL.md
.opencode/skills/smi-data-guide/reference/: acquisition-upgrades.md  beamline-physics.md  data-organization.md
.opencode/skills/smi-tiled/: SKILL.md
.opencode/skills/smi-tiled/reference/: caching.md  data-layout.md  debug-workflows.md  gotchas.md  integration.md  masks.md  metadata-resolution.md  outputs.md  saxs-geometry.md  validation.md  waxs-geometry.md
docs/source/: changelog.md  conf.py  index.md  installation.md  quickstart.md
docs/source/_static/: custom.css
docs/source/_templates/autosummary/: class.rst
docs/source/api/: defaults.rst  index.rst  integrator.rst  loader.rst  upload.rst
docs/source/reference/: beamstop-offsets-format.md  calibration-format.md  derived-products-migration.md  index.md  mask-schema.md  motor-conventions.md  pyhyperscattering-compat.md
docs/source/user-guide/: beamstop-centering.md  calibration.md  index.md  loading.md  masks.md  reduction.md  upload.md
scripts/: benchmark_gpu_histogram.py  calibrate_smi_saxs.py  calibrate_smi_z_scan.py  validate_large_scan.py
src/smi_tiled/: __init__.py  defaults.py  gpu_histogram.py  integrator.py  loader.py
src/smi_tiled/data/: __init__.py  saxs_calibration.json  smi_beamstop_offsets.json
src/smi_tiled/data/masks/: 900KW_mask_polygons.json  __init__.py  pil2M_mask_polygons.json
src/smi_tiled/derived/: __init__.py  linecuts.py  peakfit.py  virtual_axes.py
src/smi_tiled/upload/: __init__.py  cli.py  hash.py  schema.py  session.py
tests/: test_SMISWAXSLoader_chunked.py  test_SMISWAXSLoader_unit.py  test_SMI_compliance.py  test_SMI_mask_dict_input.py  test_derived_linecuts.py  test_derived_peakfit.py  test_derived_virtual_axes.py  test_mask_for_frame.py  test_smi_defaults.py
